site: fix menu z-index

--- a/site/theme/static/common.less
+++ b/site/theme/static/common.less
@@ -37,6 +37,10 @@ a {
   position: relative;
 }
 
+.main-menu {
+  z-index: 1;
+}
+
 .aside-container {
   padding-bottom: 50px;
   font-family: Lato, @font-family;
